fix: pagination numbers overlapping when there are multiple lines

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -103,6 +103,7 @@ twitterwidget {
   ul {
     display: inline-block;
     padding: 0;
+    line-height: 2em;
 
     li {
       display: inline;
